--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "prop-types": "^15.8.1",
